Add ParkedTextField, Update Labels

--- a/CanYou3/Base.lproj/Main.storyboard
+++ b/CanYou3/Base.lproj/Main.storyboard
@@ -44,10 +44,10 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
-        <!--Base View Controller-->
+        <!--Base Background View Controller-->
         <scene sceneID="lB0-ry-DS1">
             <objects>
-                <viewController storyboardIdentifier="WelcomeViewController" id="DKh-Uz-PW7" customClass="BaseViewController" customModule="CanYou3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WelcomeViewController" id="DKh-Uz-PW7" customClass="BaseBackgroundViewController" customModule="CanYou3" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="oF3-x4-nvL"/>
                         <viewControllerLayoutGuide type="bottom" id="XSF-z5-ZHo"/>
@@ -63,28 +63,190 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="heroID" value="label"/>
+                                </userDefinedRuntimeAttributes>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cBx-JN-2dL">
-                                <rect key="frame" x="32" y="617" width="311" height="42"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="Start"/>
+                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7hL-uH-RJJ" customClass="PMSuperButton" customModule="PMSuperButton">
+                                <rect key="frame" x="127" y="597" width="120" height="50"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="3b0-zO-yzl"/>
+                                    <constraint firstAttribute="width" constant="120" id="ZhM-AC-4ZI"/>
+                                </constraints>
+                                <state key="normal" title="Start">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="6"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                        <color key="value" red="0.34509803919999998" green="0.74901960779999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                        <real key="value" value="0.20000000000000001"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                        <size key="value" width="1" height="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="ripple" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="rippleColor">
+                                        <color key="value" red="0.97851564489999998" green="0.70144316220000003" blue="0.91699220739999998" alpha="0.54422624139999998" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="gradientEnabled" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="gradientStartColor">
+                                        <color key="value" red="1" green="0.59999999999999998" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="gradientEndColor">
+                                        <color key="value" red="1" green="0.36862745099999999" blue="0.38431372549999998" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="gradientHorizontal" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="cgL-rK-RdE" kind="show" id="SzZ-Qx-wdA"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="XSF-z5-ZHo" firstAttribute="top" secondItem="7hL-uH-RJJ" secondAttribute="bottom" constant="20" id="1ZV-Ng-rYg"/>
                             <constraint firstItem="WFt-yb-ihK" firstAttribute="top" secondItem="oF3-x4-nvL" secondAttribute="bottom" id="2Mf-j2-343"/>
                             <constraint firstItem="WFt-yb-ihK" firstAttribute="leading" secondItem="yja-W3-dGF" secondAttribute="leadingMargin" id="5hv-RS-3qU"/>
-                            <constraint firstItem="XSF-z5-ZHo" firstAttribute="top" secondItem="cBx-JN-2dL" secondAttribute="bottom" constant="8" id="IOB-dG-xbo"/>
                             <constraint firstAttribute="trailingMargin" secondItem="WFt-yb-ihK" secondAttribute="trailing" id="TL7-XQ-AuO"/>
                             <constraint firstItem="XSF-z5-ZHo" firstAttribute="top" secondItem="WFt-yb-ihK" secondAttribute="bottom" id="b8P-p0-m55"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="cBx-JN-2dL" secondAttribute="trailing" constant="16" id="lV7-It-8BF"/>
-                            <constraint firstItem="cBx-JN-2dL" firstAttribute="leading" secondItem="yja-W3-dGF" secondAttribute="leadingMargin" constant="16" id="wh7-Y2-cM9"/>
+                            <constraint firstItem="7hL-uH-RJJ" firstAttribute="centerX" secondItem="yja-W3-dGF" secondAttribute="centerX" id="eCL-fu-5Te"/>
                         </constraints>
                     </view>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="isHeroEnabled" value="YES"/>
+                    </userDefinedRuntimeAttributes>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UQJ-lM-q8v" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="822" y="36"/>
+        </scene>
+        <!--Cigarette Daily View Controller-->
+        <scene sceneID="JDp-K5-Qhc">
+            <objects>
+                <viewController id="cgL-rK-RdE" customClass="CigaretteDailyViewController" customModule="CanYou3" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iEw-6k-HFs"/>
+                        <viewControllerLayoutGuide type="bottom" id="Y2g-tM-nCn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Hl2-Gg-H1r">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sBx-mW-TJx">
+                                <rect key="frame" x="16" y="140" width="343" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="XDN-7G-bYQ"/>
+                                </constraints>
+                                <string key="text">하루 평균
+몇 개비 피우시나요?</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="heroID" value="label"/>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="brQ-RH-QoG" customClass="ParkedTextField" customModule="ParkedTextField">
+                                <rect key="frame" x="32" y="321" width="311" height="24"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="parkedText" value=" 개비"/>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="placeholderText" value="20"/>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="parkedTextColor">
+                                        <color key="value" red="0.50196081400000003" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nAK-L5-GaW" customClass="PMSuperButton" customModule="PMSuperButton">
+                                <rect key="frame" x="127" y="597" width="120" height="50"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="78g-XP-aH3"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="AWY-rt-3IL"/>
+                                    <constraint firstAttribute="width" constant="120" id="gwD-f1-ffN"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="npF-Dd-0UP"/>
+                                </constraints>
+                                <state key="normal" title="Start">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="6"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                        <color key="value" red="0.34509803919999998" green="0.74901960779999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                        <real key="value" value="0.20000000000000001"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                        <size key="value" width="1" height="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="ripple" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="rippleColor">
+                                        <color key="value" red="0.97851564489999998" green="0.70144316220000003" blue="0.91699220739999998" alpha="0.54422624139999998" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="gradientEnabled" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="gradientStartColor">
+                                        <color key="value" red="1" green="0.59999999999999998" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="gradientEndColor">
+                                        <color key="value" red="1" green="0.36862745099999999" blue="0.38431372549999998" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="gradientHorizontal" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="sBx-mW-TJx" secondAttribute="trailing" id="70d-MV-LgM"/>
+                            <constraint firstItem="Y2g-tM-nCn" firstAttribute="top" secondItem="nAK-L5-GaW" secondAttribute="bottom" constant="20" id="CVR-ip-fOK"/>
+                            <constraint firstItem="brQ-RH-QoG" firstAttribute="centerY" secondItem="Hl2-Gg-H1r" secondAttribute="centerY" id="Gl0-aC-iKN"/>
+                            <constraint firstItem="sBx-mW-TJx" firstAttribute="centerX" secondItem="Hl2-Gg-H1r" secondAttribute="centerX" id="QS7-RP-R4D"/>
+                            <constraint firstItem="nAK-L5-GaW" firstAttribute="centerX" secondItem="Hl2-Gg-H1r" secondAttribute="centerX" id="Ykk-Ot-XQT"/>
+                            <constraint firstItem="sBx-mW-TJx" firstAttribute="leading" secondItem="Hl2-Gg-H1r" secondAttribute="leadingMargin" id="cCK-yw-Xjh"/>
+                            <constraint firstItem="brQ-RH-QoG" firstAttribute="leading" secondItem="Hl2-Gg-H1r" secondAttribute="leadingMargin" constant="16" id="h5X-Zv-pUy"/>
+                            <constraint firstItem="brQ-RH-QoG" firstAttribute="centerX" secondItem="Hl2-Gg-H1r" secondAttribute="centerX" id="nDj-Gw-sc2"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="brQ-RH-QoG" secondAttribute="trailing" constant="16" id="r6x-oo-4YL"/>
+                            <constraint firstItem="sBx-mW-TJx" firstAttribute="top" secondItem="iEw-6k-HFs" secondAttribute="bottom" constant="120" id="rNN-1d-mZi"/>
+                        </constraints>
+                    </view>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="isHeroEnabled" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <outlet property="cigaretteDaily" destination="brQ-RH-QoG" id="lHd-Hk-518"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eaL-z4-e4Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1686" y="36"/>
         </scene>
     </scenes>
 </document>
